@@ -11,6 +11,7 @@
   * conda search now shows the channel that the package comes from
   * conda search has a new --platform flag for searching for packages in other
     platforms.
+  * add ability to export autoremove .la files
 
 
 2014-01-17   2.3.1:
